Trying to get teh API to behave
